@@ -20,13 +20,10 @@
 package org.apache.druid.segment.filter;
 
 import com.google.common.base.Function;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
+import org.apache.druid.data.input.ColumnsFilter;
 import org.apache.druid.data.input.InputRow;
+import org.apache.druid.data.input.InputRowSchema;
 import org.apache.druid.data.input.impl.DimensionsSpec;
-import org.apache.druid.data.input.impl.InputRowParser;
-import org.apache.druid.data.input.impl.MapInputRowParser;
-import org.apache.druid.data.input.impl.TimeAndDimsParseSpec;
 import org.apache.druid.data.input.impl.TimestampSpec;
 import org.apache.druid.java.util.common.DateTimes;
 import org.apache.druid.java.util.common.Pair;
@@ -52,22 +49,21 @@ import java.util.Map;
 public class InvalidFilteringTest extends BaseFilterTest
 {
   private static final String TIMESTAMP_COLUMN = "ts";
-
-  private static final InputRowParser<Map<String, Object>> PARSER = new MapInputRowParser(
-      new TimeAndDimsParseSpec(
-          new TimestampSpec(TIMESTAMP_COLUMN, "millis", DateTimes.of("2000")),
-          new DimensionsSpec(DimensionsSpec.getDefaultSchemas(ImmutableList.of("dim0", "dim1", "dim2", "dim3")))
-      )
+  
+  private static final InputRowSchema SCHEMA = new InputRowSchema(
+      new TimestampSpec(TIMESTAMP_COLUMN, "millis", DateTimes.of("2000")),
+      new DimensionsSpec(DimensionsSpec.getDefaultSchemas(List.of("dim0", "dim1", "dim2", "dim3"))),
+      ColumnsFilter.all()
   );
 
-  private static final InputRow ROW0 = PARSER.parseBatch(ImmutableMap.of("ts", 1L, "dim0", "1", "dim1", "", "dim2", ImmutableList.of("a", "b"))).get(0);
-  private static final InputRow ROW1 = PARSER.parseBatch(ImmutableMap.of("ts", 2L, "dim0", "2", "dim1", "10", "dim2", ImmutableList.of())).get(0);
-  private static final InputRow ROW2 = PARSER.parseBatch(ImmutableMap.of("ts", 3L, "dim0", "3", "dim1", "2", "dim2", ImmutableList.of(""))).get(0);
-  private static final InputRow ROW3 = PARSER.parseBatch(ImmutableMap.of("ts", 4L, "dim0", "4", "dim1", "1", "dim2", ImmutableList.of("a"))).get(0);
-  private static final InputRow ROW4 = PARSER.parseBatch(ImmutableMap.of("ts", 5L, "dim0", "5", "dim1", "def", "dim2", ImmutableList.of("c"))).get(0);
-  private static final InputRow ROW5 = PARSER.parseBatch(ImmutableMap.of("ts", 6L, "dim0", "6", "dim1", "abc")).get(0);
+  private static final InputRow ROW0 = makeMapRow(SCHEMA, Map.of("ts", 1L, "dim0", "1", "dim1", "", "dim2", List.of("a", "b")));
+  private static final InputRow ROW1 = makeMapRow(SCHEMA, Map.of("ts", 2L, "dim0", "2", "dim1", "10", "dim2", List.of()));
+  private static final InputRow ROW2 = makeMapRow(SCHEMA, Map.of("ts", 3L, "dim0", "3", "dim1", "2", "dim2", List.of("")));
+  private static final InputRow ROW3 = makeMapRow(SCHEMA, Map.of("ts", 4L, "dim0", "4", "dim1", "1", "dim2", List.of("a")));
+  private static final InputRow ROW4 = makeMapRow(SCHEMA, Map.of("ts", 5L, "dim0", "5", "dim1", "def", "dim2", List.of("c")));
+  private static final InputRow ROW5 = makeMapRow(SCHEMA, Map.of("ts", 6L, "dim0", "6", "dim1", "abc"));
 
-  private static final List<InputRow> ROWS = ImmutableList.of(
+  private static final List<InputRow> ROWS = List.of(
       ROW0,
       ROW1,
       ROW2,
@@ -111,23 +107,23 @@ public class InvalidFilteringTest extends BaseFilterTest
     // single value matching
     assertFilterMatches(
         new SelectorDimFilter("hyperion", "a string", null),
-        ImmutableList.of()
+        List.of()
     );
 
     assertFilterMatches(
         new SelectorDimFilter("hyperion", null, null),
-        ImmutableList.of("1", "2", "3", "4", "5", "6")
+        List.of("1", "2", "3", "4", "5", "6")
     );
 
     // predicate based matching
     assertFilterMatches(
         new InDimFilter("hyperion", Arrays.asList("hello", "world"), null),
-        ImmutableList.of()
+        List.of()
     );
 
     assertFilterMatches(
         new InDimFilter("hyperion", Arrays.asList("hello", "world", null), null),
-        ImmutableList.of("1", "2", "3", "4", "5", "6")
+        List.of("1", "2", "3", "4", "5", "6")
     );
   }
 }
